--- a/contact-manager-backend/package.json
+++ b/contact-manager-backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "prod": "cross-env NODE_ENV=production node server.js"
   },
   "author": "sathiyam",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "cross-env": "^7.0.3"
   }
 }
