--- a/contact-manager-frontend/package.json
+++ b/contact-manager-frontend/package.json
@@ -4,10 +4,12 @@
   "description": "A frontend application for managing contacts.",
   "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start --openssl-legacy-provider",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.development react-scripts start",
+    "build": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "env-cmd -f .env.development react-scripts start",
+    "prod": "env-cmd -f .env.production react-scripts start"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -19,8 +21,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.27.0",
+    "http-proxy-middleware": "^3.0.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   },
